tests/semantica/valid/bloque/test1.ctds
program 
	{
        void main(){
            integer x = 0;
            integer y = 0;
            {
                integer y = 1;
                {
                    integer x = 2;
                    x = x + y;
                }
                x = x + y;
            }
            x = x + y;
        }
    }