tests/semantica/invalid/operador/test2.ctds
program
	{
		bool x = true > 1;

		void main(){
			
		}
	}